# biotope

./: .gitignore  .ocamlinit  biotope.opam  dune-project
etc/docker-images/ataqc/0.3.3/: Dockerfile
etc/docker-images/cactus/91d634/: Dockerfile
etc/docker-images/discovardenovo/52488/: Dockerfile
etc/docker-images/fastqc/0.11.8/: Dockerfile
etc/docker-images/ms/20140908/: Dockerfile
etc/docker-images/priam/2018/: Dockerfile
etc/docker-images/trinotate/3.1.1/: Dockerfile
lib/: ChIPQC.ml  ChIPQC.mli  DESeq2.ml  DESeq2.mli  FastQC.ml  FastQC.mli  alignment_stats.ml  alignment_stats.mli  bed.mli  bedtools.ml  bedtools.mli  biotope.ml  biotope.mli  bowtie.ml  bowtie.mli  bowtie2.ml  bowtie2.mli  busco.ml  busco.mli  cisa.ml  cisa.mli  cisbp.ml  cisbp.mli  comparative_genomics.ml  deeptools.ml  deeptools.mli  dnaseq_with_reference_genome.ml  dnaseq_with_reference_genome.mli  dune  ensembl.ml  ensembl.mli  fastq.ml  fastq.mli  fastq_dataset.ml  fastq_dataset.mli  fastq_sample.ml  fastq_sample.mli  fastq_screen.ml  fastq_screen.mli  formats.ml  (+56 more)
lib/examples/: chen2008.ml  dune  zhou2011.ml
lib/light/: biotope_light.ml  biotope_light.mli  dune
